Fix contact on mobile

--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,8 +1,7 @@
 .contact{
     width: 100%;
-    height: calc(100vh - 180px);
-    margin-top: 120px;
-    padding-top: 100px;
+    height: calc(100vh - 100px);
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,7 +51,7 @@
     }
 
     &__text{
-        max-width: 95%;
+        max-width: 90%;
         font-family: $title-font;
         margin: 30px 0px 30px 0px;
     }
